[editor] fix(footer-toolbar): tooltips clipping fix by padding/margin hack

--- a/packages/editor/statics/styles/footer-toolbar.scss
+++ b/packages/editor/statics/styles/footer-toolbar.scss
@@ -11,5 +11,12 @@
 }
 
 .footerToolbar_scrollableContainer {
-  overflow: initial;
+  width: 100%;
+  padding: 90px 0;
+  margin: -90px 0;
+  pointer-events: none;
+  pointer-events: none;
+    & > * {
+        pointer-events: initial;
+    }
 }
